--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -7,6 +7,24 @@ header {
   }
 }
 
+#gradientContainer {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(0 0, 100% 0, 100% 25%, 0 70%);
+
+  canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
+
 #container {
   padding: 50px 0 150px 0;
 }
