--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
 
   img {
-    width: max(9%, 130px);
+    max-width: max(7%, 130px);
     margin: 20px 0 0 15%;
   }
 }
@@ -14,7 +14,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  clip-path: polygon(0 0, 100% 0, 100% 25%, 0 70%);
+  clip-path: polygon(0 0, 100% 0, 100% 40%, 0 70%);
 
   canvas {
     position: absolute;
@@ -26,16 +26,17 @@ header {
 }
 
 #container {
-  padding: 50px 0 100px 0;
+  padding: 50px 20px 100px 20px;
 
   h1 {
     font-family: "Poppins", sans-serif;
     color: var(--green-secondary);
+    font-size: clamp(2rem, 3vw, 3rem);
   }
   p {
     font-family: "Open Sans", sans-serif;
     color: #0d2617;
-    font-size: 1.05rem;
+    font-size: clamp(0.9rem, 1vw, 1.1rem);
   }
 }
 
