--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -4,7 +4,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
-  --green-primary: #177245;
+  --green-primary: #1a8033;
+  --green-primary-lighter: #27be4d;
   --green-secondary: #1a4d2e;
   --white: #f1fffa;
   --black: #0d0a0b;
