--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,7 +1,10 @@
 body {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) 5%, rgba(0, 0, 0, 0)) top / 100% 0%
-      no-repeat,
-    linear-gradient(to top, rgba(0, 0, 0, 0.8) 5%, rgba(0, 0, 0, 0)) bottom / 100% 20% no-repeat,
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(0, 0, 0, 0.4) 15%,
+      rgba(0, 0, 0, 0.4) 85%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
     url("/assets/images/login-bg.jpg") no-repeat center center fixed;
   background-size: cover;
   margin: 0;
@@ -58,6 +61,10 @@ body {
         border-radius: 15px;
         box-shadow: none;
 
+        .firebaseui-idp-button {
+          width: 280px;
+          max-width: 280px;
+        }
         .mdl-button {
           border-radius: 5px;
           padding: 15px;
