--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -8,7 +8,7 @@ body {
 }
 
 .widget {
-  border-radius: 10px;
+  border-radius: 40px;
   padding: 25px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background: white;
@@ -22,7 +22,7 @@ main {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 3rem;
-    padding: 0 0 0 8%;
+    padding: 0 0 0 18%;
     margin: 0;
     color: black;
   }
@@ -30,7 +30,7 @@ main {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 2rem;
-    padding: 50px 0 30px 8%;
+    padding: 50px 0 30px 18%;
     margin: 0;
     color: black;
     display: flex;
@@ -86,39 +86,68 @@ main {
     display: none;
   }
   .kpi-value {
+    position: relative;
+    left: -4px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 4.5rem;
-    line-height: 1.1;
+    line-height: 0.4;
     color: black;
-    /* color: var(--green-secondary); */
-    /* color: #1a4d2e; */
-    /* color: #3a5a40; */
-    /* color: #2f4f4f; */
+    padding: 30px 0 30px 0;
   }
   .kpi-label {
     font-family: "Arial", sans-serif;
-    text-wrap: wrap;
-    overflow-wrap: break-word;
     font-weight: 500;
     font-size: 1rem;
     line-height: 1.4;
-    /* color: var(--green-secondary); */
-    /* color: black; */
     color: #6c757d;
-    /* color: #343a40; */
-    /* color: #133b24; */
   }
-  .kpis .widget {
+  .kpis .widget.kpi {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center;
+    align-items: flex-start;
+    text-align: left;
+    padding-left: 40px;
+    gap: 10px;
+  }
+  .kpis .widget {
     width: 250px;
+  }
+  .description {
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #6c757d;
+    font-family: "Arial", sans-serif;
+  }
+  .kpis .lucide {
+    width: 35px;
+    height: 35px;
+    stroke-width: 2.2px;
+    position: relative;
+    top: -2px;
   }
 
   #this-week-container {
+    .kpis #activity-streak {
+      .lucide {
+        left: -5px;
+        top: 0;
+      }
+      .kpi-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-end;
+        gap: 5px;
+        padding: 10px 0 10px 0;
+
+        .kpi-value {
+          line-height: 1;
+          padding: 0;
+        }
+      }
+    }
   }
 
   #lifetime-container {
