--- a/public/styles/ecoactions.css
+++ b/public/styles/ecoactions.css
@@ -30,27 +30,54 @@
   grid-row: 2;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100dvh + 348.188px);
+}
+
 main {
   padding: 75px 0 75px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
+
+  #h1-container {
+    width: 100%;
+    padding: 0 0 50px 15%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    h1 {
+      font-family: "Poppins", sans-serif;
+      font-weight: 600;
+      font-size: 3rem;
+    }
+  }
 
   .container {
     padding: 0;
     margin: 0;
-
-    #h1-container {
-      padding-left: 20pt;
-
-      h1 {
-        font-family: "Poppins", sans-serif;
-        font-weight: 600;
-        font-size: 3rem;
-        padding: 0 0 50px 0;
-      }
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
   }
+}
+main.hidden {
+  display: none;
+}
+
+header,
+#footer-nav,
+#footer {
+  flex-shrink: 0;
 }
 
 .card-body img {
