--- a/public/styles/groups.css
+++ b/public/styles/groups.css
@@ -1,6 +1,6 @@
 #h1-container {
   width: 100%;
-  padding: 35px 0 35px 8%;
+  padding: 75px 0 75px 15%;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -11,15 +11,15 @@
     font-size: 3rem;
     padding: 0 0 10px 0;
   }
-  
 }
 
 #search-box {
-  margin-left: 50px; 
-  margin-right: 50px; 
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
-#create-new, #join-group{
+#create-new,
+#join-group {
   text-decoration: none;
   font-size: 1rem;
   padding: 10px;
@@ -31,6 +31,9 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+}
+main.hidden {
+  display: none;
 }
 
 @media (max-width: 810px) {
