--- a/public/styles/loader.css
+++ b/public/styles/loader.css
@@ -1,11 +1,10 @@
 #loader {
-  min-height: calc(100vh - 80px);
+  min-height: calc(100dvh - 80px);
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: -1;
 
   h1 {
     padding-top: 60px;
