--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -27,9 +27,9 @@
 
 /* Standard green button*/
 .green-button {
-  padding: 20px;
+  padding: 15px 30px 15px 30px;
   background-color: transparent;
-  border-radius: 5px;
+  border-radius: 25px;
   border: 2px solid var(--green-primary);
   color: var(--green-primary);
   text-transform: uppercase;
