--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -1,6 +1,6 @@
 :root {
-  --gap-primary: max(1vw, 15px);
-  --gap-secondary: max(1vw, 15px);
+  --gap-primary: clamp(10px, 1vw, 15px);
+  --gap-secondary: clamp(10px, 1vw, 15px);
 }
 
 body {
@@ -70,8 +70,7 @@ main {
     justify-content: center;
     width: 100%;
     gap: var(--gap-secondary);
-    /* height: 135px; */
-    height: 250px;
+    height: clamp(125px, 25vw, 250px);
   }
   .stats-container {
     display: flex;
@@ -90,7 +89,7 @@ main {
     left: -4px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
-    font-size: 4.5rem;
+    font-size: clamp(2.5rem, 7vw, 4.5rem);
     line-height: 0.4;
     color: black;
     padding: 30px 0 30px 0;
@@ -98,7 +97,7 @@ main {
   .kpi-label {
     font-family: "Arial", sans-serif;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: clamp(0.6rem, 2.3vw, 1rem);
     line-height: 1.4;
     color: #6c757d;
   }
@@ -112,7 +111,7 @@ main {
     gap: 10px;
   }
   .kpis .widget {
-    width: 250px;
+    width: clamp(125px, 25vw, 250px);
   }
   .description {
     font-size: 1.8rem;
@@ -121,8 +120,8 @@ main {
     font-family: "Arial", sans-serif;
   }
   .kpis .lucide {
-    width: 35px;
-    height: 35px;
+    width: clamp(20px, 3vw, 35px);
+    height: clamp(20px, 3vw, 35px);
     stroke-width: 2.2px;
     position: relative;
     top: -2px;
@@ -152,7 +151,7 @@ main {
 
   #lifetime-container {
     .kpis #lifetime-ecopoints img {
-      max-width: 50px;
+      max-width: clamp(25px, 5vw, 50px);
       filter: invert(1);
       position: relative;
       left: -4px;
@@ -176,56 +175,38 @@ main.hidden {
   display: none;
 }
 
-@media (max-width: 900px) {
-  main {
-    h1 {
-      font-size: 2.8rem;
-    }
-
-    .kpis .widget {
-      width: max(18vw, 140px);
-    }
-    .kpis {
-      height: max(18vw, 140px);
-    }
-    .kpi-value {
-      font-size: 4.5rem;
-    }
-    .kpi-label {
-      text-wrap: wrap;
-      line-height: 1.3;
-      font-size: 1rem;
-    }
-  }
-}
-
-@media (max-width: 600px) {
+@media (max-width: 810px) {
   .widget {
-    border-radius: 10px;
+    padding: 1.5vw;
+    border-radius: 35px;
+  }
+  .chart {
+    padding: 3vw;
   }
 
   main {
-    .kpis {
-      gap: 10px;
-      height: max(22vw, 110px);
-    }
-    .stats-container {
-      gap: 10px;
-    }
-    .kpis .widget {
-      width: max(22vw, 110px);
-    }
-
     .kpi-value {
-      font-size: 3rem;
+      padding: 2.5vw 0 2.5vw 0;
     }
-    .kpi-label {
-      font-size: 0.9rem;
+    .description {
+      font-size: clamp(0.8rem, 2vw, 1.8rem);
+    }
+    .kpis .widget.kpi {
+      padding-left: 5vw;
+      gap: 0;
     }
 
     #lifetime-container {
-      #weekly-ecopoints-over-time-wrapper {
-        width: max(85%, 375px);
+      #container {
+        #weekly-ecopoints-over-time-wrapper {
+          width: max(350px, 90vw);
+        }
+      }
+    }
+    #this-week-container {
+      .kpis #activity-streak .kpi-wrapper {
+        gap: 0;
+        padding: 2px 0 2px 0;
       }
     }
   }
